changes in index.html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -75,7 +75,7 @@ body {font-size:16px;}
     <hr style="width:50px;border:5px solid #3f51b5" class="w3-round">
     <h3>Global irtual Private Cloud</h3>
       <img src="Images/Global_VPC.png" alt="Global Virtual Private Cloud" style="display: block; width:50%; margin-left: auto; margin-right: auto;">
-      <p>Global VPC provides global scope between regions. The benefit of global VPC is that connection between VPC and on-premises resources is not required in every region. No communication takes place through public internet while global VPC spans multiple regions.</h3><br><br>
+      <p>Global VPC provides global scope between regions. The benefit of global VPC is that connection between VPC and on-premises resources is not required in every region. No communication takes place through public internet while global VPC spans multiple regions.</p><br>
     <h3>Shareable Virtual Private Cloud </h3>
       <img src="Images/Shareable_VPC.png" alt="Shareable Virtual Private Cloud" style="display: block; width:50%; margin-left: auto; margin-right: auto;">
       <p>Google VPC can also be shareable. It provides shareable configuration between different projects. Despite of isolation within the projects, they maintain a shared private IP space. They also have access to the common services that are provided like Virtual Private Network and Cloud Interconnect.</p><br>
