PNG renames and src resolution.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -109,7 +109,7 @@ body {font-size:16px; text-align: justify;}
     <hr style="width:50px;border:5px solid #3f51b5" class="w3-round">
     <h3 id="vpc-network"><b>VPC network</b></h3>
       <p>A VPC network is a global resource that consists of a list of regional virtual subnetworks (subnets) in data centers, all connected by a global wide area network.</p>
-      <img src="Images/VPC_Network.PNG" alt="VPC Network" style="display: block; width:50%; margin-left: auto; margin-right: auto;">
+      <img src="Images/VPC_Network.png" alt="VPC Network" style="display: block; width:50%; margin-left: auto; margin-right: auto;">
       <p>Projects can contain multiple VPC networks.</p>
       <h5><b>Specifications</b></h5>
         <p>* VPC networks, including their associated routes and firewall rules, are global resources. They are not associated with any particular region or zone.</p>
