--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -43,6 +43,7 @@ body {font-size:16px; text-align: justify;}
       </div>
     </div>
     <a href="#advantages" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Advantages</a>
+    <a href="#references" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">References</a>
   </div>
 </nav>
 
@@ -69,19 +70,21 @@ body {font-size:16px; text-align: justify;}
     <h1 class="w3-xxxlarge"><b>Introduction</b></h1>
     <hr style="width:50px;border:5px solid #3f51b5" class="w3-round">
     <h3>Virtual Private Cloud</h3>
-      <p>VPC is nothing but a private cloud that is being hosted inside a public cloud. The term “Virtual” arrived because the resources are not shared in a public infrastructure unlike the public clouds. Due to such isolation of data, it is called Virtual Private Cloud. For achieving such isolation, technologies like subnets, VLAN(virtual local area network) and VPN(virtual private network) are required.</p><br>
+      <p>VPC is nothing but a private cloud that is being hosted inside a public cloud. The term “Virtual” arrived because the resources are not shared in a public infrastructure unlike the public clouds. Due to such isolation of data, it is called Virtual Private Cloud<b><sup><a href="https://www.dsm.net/it-solutions-blog/what-is-a-virtual-private-cloud-and-what-are-its-benefits" target="_blank" class="linkcolor">[2]</a></sup></b>. For achieving such isolation, technologies like subnets, VLAN(virtual local area network) and VPN(virtual private network) are required.</p><br>
     <img src="Images/architecture.png" alt="Architecture" style="width:100%"><br><br>
+    <p style="text-align: center;"><b>Source<a href="https://www.cloudflare.com/learning/cloud/what-is-a-virtual-private-cloud/" target="_blank" class="linkcolor"><sup>[3]</sup></a></b></p>
     <h3>Virtual Private Cloud instead of Private Cloud</h3>
-      <p>Virtual private cloud provides:</p>
+      <p>Virtual private cloud<b><sup><a href="https://www.cloudflare.com/learning/cloud/what-is-a-virtual-private-cloud/" target="_blank" class="linkcolor">[3]</a></sup></b> provides:</p>
       <p>&rarr; <b>Better scalability</b> as the users have the advantage of adding more and more computing resources based on demand.</p>
       <p>&rarr; <b>Easy hybrid cloud deployment</b> as connecting a virtual private network to a public cloud becomes very easy with the help of virtual private network.</p>
       <p>&rarr; <b>Better performance</b> because the applications and websites hosted on the cloud process and perform better compared to the ones performing on the local servers.</p>
       <p>&rarr; <b>Better security</b> as the data or information which is passed to the virtual private cloud is under control of the user itself.</p><br>
     <h3>Google Virtual Private Cloud</h3>
-      <p>&rarr; Google VPC is a virtual private cloud which provides networking functionalities and facilities like running code, storing data, hosting websites, etc.</p>
+      <p>&rarr; Google VPC<b><sup><a href="https://cloud.google.com/vpc" target="_blank" class="linkcolor">[1]</a></sup></b> is a virtual private cloud which provides networking functionalities and facilities like running code, storing data, hosting websites, etc.</p>
       <p>&rarr; It gives you the flexibility to scale and control how workloads connect regionally and globally.</p>
       <p>&rarr; When you connect your on-premises or remote resources to Google Cloud, you’ll have global access to your VPCs without needing to replicate connectivity or administrative policies in each region.</p>
-      <p>&rarr; <a href="https://www.youtube.com/watch?v=cNb7xKyya5c" target="_blank" class="linkcolor">Click here</a> to get started with Virtual Private Cloud on Google cloud platform</p>
+      <p>&rarr; <a href="https://www.youtube.com/watch?v=cNb7xKyya5c" target="_blank" class="linkcolor">Get started with Virtual Private Cloud</a> on Google cloud platform</p>
+      <p>&rarr; <a href=" https://www.youtube.com/watch?v=NPs_-Y5nFgE" target="_blank" class="linkcolor">Create a Virtual Private Cloud</a>  on Google cloud platform</p>
   </div>
 
   <!-- Categories -->
@@ -90,15 +93,19 @@ body {font-size:16px; text-align: justify;}
     <hr style="width:50px;border:5px solid #3f51b5" class="w3-round">
     <h3>Global Virtual Private Cloud</h3>
       <img src="Images/Global_VPC.png" alt="Global Virtual Private Cloud" style="display: block; width:50%; margin-left: auto; margin-right: auto;">
+      <p style="text-align: center;"><b>Source<a href="https://cloud.google.com/vpc" target="_blank" class="linkcolor"><sup>[1]</sup></a></b></p>
       <p>Global VPC provides global scope between regions. The benefit of global VPC is that connection between VPC and on-premises resources is not required in every region. No communication takes place through public internet while global VPC spans multiple regions.</p><br>
     <h3>Shareable Virtual Private Cloud </h3>
       <img src="Images/Shareable_VPC.png" alt="Shareable Virtual Private Cloud" style="display: block; width:50%; margin-left: auto; margin-right: auto;">
+      <p style="text-align: center;"><b>Source<a href="https://cloud.google.com/vpc" target="_blank" class="linkcolor"><sup>[1]</sup></a></b></p>
       <p>Google VPC can also be shareable. It provides shareable configuration between different projects. Despite of isolation within the projects, they maintain a shared private IP space. They also have access to the common services that are provided like Virtual Private Network and Cloud Interconnect.</p><br>
     <h3>Expandable Virtual Private Cloud </h3>
       <img src="Images/Expandable_VPC.png" alt="Expandable Virtual Private Cloud" style="display: block; width:50%; margin-left: auto; margin-right: auto;">
+      <p style="text-align: center;"><b>Source<a href="https://cloud.google.com/vpc" target="_blank" class="linkcolor"><sup>[1]</sup></a></b></p>
       <p>Google VPC can also be expandable. It provides you with a functionality which allows you to increase the IP space of subnets used in the system without any workload shutdowns. The advantage of expandable VPC is the flexibility it provides along with the growth options using which customer needs are fulfilled.</p><br>
     <h3>Transparent Virtual Private Cloud</h3>
       <img src="Images/Transparent_VPC.png" alt="Transparent Virtual Private Cloud" style="display: block; width:50%; margin-left: auto; margin-right: auto;">
+      <p style="text-align: center;"><b>Source<a href="https://cloud.google.com/vpc" target="_blank" class="linkcolor"><sup>[1]</sup></a></b></p>
       <p>Transparent google VPC provides you with near real-time logging to monitor your applications and their deployment. VPC flow logs are used for this purpose. Using this process one can analyze the performance of the application and the networking concepts involved in it. Advantage of transparent VPC is that the deployment of the applications are done securely and efficiently.</p>
   </div>
 
@@ -109,7 +116,8 @@ body {font-size:16px; text-align: justify;}
     <hr style="width:50px;border:5px solid #3f51b5" class="w3-round">
     <h3 id="vpc-network"><b>VPC network</b></h3>
       <p>A VPC network is a global resource that consists of a list of regional virtual subnetworks (subnets) in data centers, all connected by a global wide area network.</p>
-      <img src="Images/VPC_Network.png" alt="VPC Network" style="display: block; width:50%; margin-left: auto; margin-right: auto;">
+      <img src="Images/VPC_Network.PNG" alt="VPC Network" style="display: block; width:50%; margin-left: auto; margin-right: auto;">
+      <p style="text-align: center;"><b>Source<a href="https://cloud.google.com/vpc" target="_blank" class="linkcolor"><sup>[1]</sup></a></b></p>
       <p>Projects can contain multiple VPC networks.</p>
       <h5><b>Specifications</b></h5>
         <p>* VPC networks, including their associated routes and firewall rules, are global resources. They are not associated with any particular region or zone.</p>
@@ -124,10 +132,12 @@ body {font-size:16px; text-align: justify;}
         <p>* When you create a subnet, you must define a primary IP address range. You can optionally define secondary IP address ranges: Primary and Secondary.</p>
       <h5><b>Reserved IPs</b></h5>
         <p>* Every subnet has four reserved IP addresses in its primary IP range. There are no reserved IP addresses in the secondary IP ranges.</p>
-        <img src="Images/ReservedIPs.png" alt="Reserved IPs" style="display: block; width:50%; margin-left: auto; margin-right: auto;"><br><br><br>
+        <img src="Images/ReservedIPs.png" alt="Reserved IPs" style="display: block; width:50%; margin-left: auto; margin-right: auto;">
+        <p style="text-align: center;"><b>Source<a href="https://cloud.google.com/vpc" target="_blank" class="linkcolor"><sup>[1]</sup></a></b></p><br>
 
     <h3 id="packet-mirroring"><b>Packet Mirroring</b></h3>
       <p>Packet mirroring is a feature in which it copies the traffic of the instances which are specified in the Virtual Private Cloud network. Then these copies of traffic are sent to a collector destination for examination. The data captured in this process includes ingress traffic (traffic that enters a network boundary), egress traffic (traffic that exits a network boundary) and packet data specifically payloads and headers. The process of mirroring is conducted on instances of Virtual Machines.</p>
+      <p>Introduction to Packet Mirroring: <a href="https://www.youtube.com/watch?v=3CI27ge-R5s" target="_blank" class="linkcolor">Click here</a></p>
       <img src="Images/PacketMirroring.png" alt="Packet Mirroring" style="display: block; width:50%; margin-left: auto; margin-right: auto;">
       <p>The purpose of this feature is to monitor or analyze your security status. Real world scenarios in which packet mirroring becomes very useful are:</p>
         <p>* Enterprise Security (to detect threats or anomalies)</p>
@@ -170,12 +180,14 @@ body {font-size:16px; text-align: justify;}
         <p>* There are certain advantages of using VPC network peering instead of external IP addresses and VPN to provide connection between networks.</p>
         <p>* <b>Network latency: </b>Private networking has lower latency compared to public IP networking which deals with much higher latency. Peering traffic remains in the network of google itself.</p>
         <p>* <b>Network security: </b>Service owners do not have to expose their services to public internet and face unnecessary risks.</p>
-        <p>* <b>Network cost: </b>Networks that are peered can use internal IPs for communication purpose and hence save the egress cost (cost of outgoing network traffic).</p><br>
+        <p>* <b>Network cost: </b>Networks that are peered can use internal IPs for communication purpose and hence save the egress cost (cost of outgoing network traffic).</p>
+        <p>Simplify routing with VPC Peering: <a href="https://www.youtube.com/watch?v=4UQacCynuFU" target="_blank" class="linkcolor">Click here</a></p><br>
 
     <h3 id="shared-vpc"><b>Shared VPC</b></h3>
       <p>Main objective of shared VPC is that it allows an organization to connect different resources from multiple projects to a common VPC network. This makes the communication between them secured and efficient with the help of internal IPs of the common VPC network.</p>
       <p>While using shared VPC, a project is designated as a host project and multiple projects are attached to it which are called service projects.</p>
       <img src="Images/SharedVPC.png" alt="Shared VPC" style="display: block; width:50%; margin-left: auto; margin-right: auto;">
+      <p style="text-align: center;"><b>Source<a href="https://cloud.google.com/vpc" target="_blank" class="linkcolor"><sup>[1]</sup></a></b></p>
       <h5><b>Concepts</b></h5>
         <p><b>* Shared VPC networks: </b>VPC networks defined in the host project are called shared VPC networks. It is made available as a common shared network for the resources of different projects involved in the organization.</p>
         <p><b>* Host Project: </b>It contains one or more shared VPC networks . A shared VPC admin designates a project as host project.</p>
@@ -190,7 +202,9 @@ body {font-size:16px; text-align: justify;}
       <p>In a VPC network, a route consists of a single destination (CIDR) and a single next hop</p>
       <p>VPC networks can include system-generated routes or custom routes.</p>
       <img src="Images/SystemGeneratedRoutes.png" alt="System Generated Routes" style="display: block; width:50%; margin-left: auto; margin-right: auto;">
+      <p style="text-align: center;"><b>Source<a href="https://cloud.google.com/vpc" target="_blank" class="linkcolor"><sup>[1]</sup></a></b></p>
       <img src="Images/CustomRoutes.png" alt="Custom Routes" style="display: block; width:50%; margin-left: auto; margin-right: auto;">
+      <p style="text-align: center;"><b>Source<a href="https://cloud.google.com/vpc" target="_blank" class="linkcolor"><sup>[1]</sup></a></b></p>
       <h5><b>Static routes</b></h5>
         <p>* Static routes can use any of the static route next hops.</p>
         <p>* If you use the Google Cloud Console to create a Cloud VPN tunnel that uses policy-based routing or one that is a route-based VPN, static routes for the remote traffic selectors are created for you. For more information, see Cloud VPN networks and tunnel routing.</p>
@@ -257,6 +271,7 @@ body {font-size:16px; text-align: justify;}
         <p>* Cloud SQL</p>
       <h5><b>Implementation </b></h5>
         <img src="Images/PrivateAccessImplementation.png" alt="Private Access Implementation" style="display: block; width:50%; margin-left: auto; margin-right: auto;">
+        <p style="text-align: center;"><b>Source<a href="https://cloud.google.com/vpc" target="_blank" class="linkcolor"><sup>[1]</sup></a></b></p>
         <p>The following list provides details about the above diagram:</p>
         <p>* Firewall rules in the VPC network have been configured to allow egress to 0.0.0.0/0 (or at least to the server IPs for Google APIs and services).</p>
         <p>* VM A1 can access Google APIs and services, including Cloud Storage, because its network interface is located in subnet-a, which has Private Google Access enabled. Private Google Access applies to the instance because it only has an internal IP address.</p>
@@ -276,14 +291,37 @@ body {font-size:16px; text-align: justify;}
   <div class="w3-container" id="advantages" style="margin-top:75px">
     <h1 class="w3-xxxlarge "><b>Advantages</b></h1>
     <hr style="width:50px;border:5px solid #3f51b5" class="w3-round">
-    <p>&rarr; Flexible</p>
-    <p>&rarr; Secure</p>
-    <p>&rarr; Performance</p>
-    <p>&rarr; Scalable</p>
-    <p>&rarr; Savings (cost efficient)</p>
-    <p>&rarr; Easy integration</p>
-    <p>&rarr; Seamless upgrades</p>
-    <p>&rarr; Eco-friendliness</p>
+    <h5><b>Flexible</b></h5>
+      <p>VPC shows flexibility to scale and control how workloads connect regionally and globally. It is also flexible in letting you increase the IP space of any subnet. It provides a flexible app engine environment on which you can specify a network to deploy your instances of a service.</p>
+    <h5><b>Secure</b></h5>
+      <p>Information passed through a VPC stays within a customer’s control without crossing the internet.</p>
+    <h5><b>Performance</b></h5>
+      <p>Cloud-hosted websites and applications typically perform better than those hosted on local on-premises servers.</p>
+    <h5><b>Scalable</b></h5>
+      <p>Because a VPC is hosted by a public cloud provider, customers can add more computing resources on demand.</p>
+    <h5><b>Savings (cost efficient)</b></h5>
+      <p>Because VPCs are within a public cloud, customers still benefit from economies of scale, sharing costs with other organizations without compromising the security.</p>
+    <h5><b>Easy integration</b></h5>
+      <p>A VPC can be integrated with other VPCs, the public cloud, or an on-premise infrastructure. This effectively becomes a hybrid cloud.</p>
+    <h5><b>Seamless upgrades</b></h5>
+      <p>With all customers operating on the same hardware, the VPC provider can upgrade everyone incrementally and with no downtime. Over time, customers’ workloads actually get more secure and quicker.</p>
+    <h5><b>Eco-friendliness</b></h5>
+      <p>A VPC operating within a cloud hosting company leaves much less of a carbon footprint versus running on dedicated hardware, something that can be promoted to new clients.</p>
+
+  </div>
+
+  <!-- References -->
+  <div class="w3-container" id="references" style="margin-top:75px">
+    <h1 class="w3-xxxlarge "><b>References</b></h1>
+    <hr style="width:50px;border:5px solid #3f51b5" class="w3-round">
+    <p>1. <a href="https://cloud.google.com/vpc" target="_blank" class="linkcolor">https://cloud.google.com/vpc</a></p>
+      <p>This is the official website of Google Virtual Private Cloud which has a detailed documentation of the concepts related to google VPC along with its features and functionality.</p><br>
+    <p>2. <a href="https://www.dsm.net/it-solutions-blog/what-is-a-virtual-private-cloud-and-what-are-its-benefits" target="_blank" class="linkcolor">https://www.dsm.net/it-solutions-blog/what-is-a-virtual-private-cloud-and-what-are-its-benefits</a></p>
+      <p>This is a blog posted by DSM which is one of the preferred cloud provider in Florida. This blog provides basic information about what is a virtual private cloud and what are the benefits of using it.</p>
+      <p>Date posted: 9 Aug 2018</p><br>
+    <p>3. <a href="https://www.cloudflare.com/learning/cloud/what-is-a-virtual-private-cloud/" target="_blank" class="linkcolor">https://www.cloudflare.com/learning/cloud/what-is-a-virtual-private-cloud/</a></p>
+      <p>This is an article provided by Cloudflare, Inc. Cloudflare is an American web-infrastructure and website-security company. This article contains the concept of a virtual private cloud, how it works and why to use a VPC instead of a private network.</p><br>
+
   </div>
 
 <!-- End page content -->
