--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -116,7 +116,7 @@ body {font-size:16px; text-align: justify;}
     <hr style="width:50px;border:5px solid #3f51b5" class="w3-round">
     <h3 id="vpc-network"><b>VPC network</b></h3>
       <p>A VPC network is a global resource that consists of a list of regional virtual subnetworks (subnets) in data centers, all connected by a global wide area network.</p>
-      <img src="Images/VPC_Network.PNG" alt="VPC Network" style="display: block; width:50%; margin-left: auto; margin-right: auto;">
+      <img src="Images/VPC_Network.png" alt="VPC Network" style="display: block; width:50%; margin-left: auto; margin-right: auto;">
       <p style="text-align: center;"><b>Source<a href="https://cloud.google.com/vpc" target="_blank" class="linkcolor"><sup>[1]</sup></a></b></p>
       <p>Projects can contain multiple VPC networks.</p>
       <h5><b>Specifications</b></h5>
